CMAKE_MINIMUM_REQUIRED(VERSION 2.0)
PROJECT(openglExamples)

set(CXX_FLAGS "-stdlib=libc++")

FIND_PACKAGE(OpenGL REQUIRED)

FIND_LIBRARY(COCOA_LIBRARY Cocoa REQUIRED)
FIND_LIBRARY(IOKIT_LIBRARY IOKit REQUIRED) 
FIND_LIBRARY(COREVIDEO_LIBRARY CoreVideo REQUIRED)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

ADD_EXECUTABLE(example1 main.cpp)

TARGET_LINK_LIBRARIES(example1 ${OPENGL_LIBRARIES} 
								${GLFW_LIBRARIES} 
								${COCOA_LIBRARY} 
								${IOKIT_LIBRARY}
								${COREVIDEO_LIBRARY})