CMAKE_MINIMUM_REQUIRED(VERSION 2.0)
PROJECT(openglExamples)

set(CXX_FLAGS "-stdlib=libc++")

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLFW REQUIRED)

FIND_LIBRARY(COCOA_LIBRARY Cocoa REQUIRED)
FIND_LIBRARY(IOKIT_LIBRARY IOKit REQUIRED) 
FIND_LIBRARY(COREVIDEO_LIBRARY CoreVideo REQUIRED)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

ADD_DEFINITIONS(-DGLFW_INCLUDE_GLCOREARB)

ADD_EXECUTABLE(game main.cpp Window.cpp)

TARGET_LINK_LIBRARIES(game ${OPENGL_LIBRARIES} 
							   ${GLFW_LIBRARY} 
							   ${COCOA_LIBRARY} 
							   ${IOKIT_LIBRARY}
							   ${COREVIDEO_LIBRARY})