CMAKE_MINIMUM_REQUIRED(VERSION 2.0)
PROJECT(openglExamples)

set(CMAKE_CXX_FLAGS "-stdlib=libc++ -std=c++11")

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLFW REQUIRED)

FIND_LIBRARY(COCOA_LIBRARY Cocoa REQUIRED)
FIND_LIBRARY(IOKIT_LIBRARY IOKit REQUIRED) 
FIND_LIBRARY(COREVIDEO_LIBRARY CoreVideo REQUIRED)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})

#defines for glfw library, also included in some source files to help the autocomplet
ADD_DEFINITIONS(-DGLFW_INCLUDE_GLCOREARB)
#defines for GLM library
ADD_DEFINITIONS(-DGLM_FORCE_RADIANS)
#defines for the GLEW library
ADD_DEFINITIONS(-DGLEW_STATIC)

ADD_EXECUTABLE(game main.cpp Window.cpp Camera.cpp RenderSystem.cpp)

TARGET_LINK_LIBRARIES(game 
                 ${OPENGL_LIBRARIES} 
							   ${GLFW_LIBRARY} 
							   ${COCOA_LIBRARY} 
							   ${IOKIT_LIBRARY}
							   ${COREVIDEO_LIBRARY})

SET( CMAKE_EXPORT_COMPILE_COMMANDS 1 )
